[gd_scene load_steps=8 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://Resources/Background/black.png" type="Texture" id=2]
[ext_resource path="res://Resources/Background/stars2.png" type="Texture" id=3]
[ext_resource path="res://Resources/Background/stars1.png" type="Texture" id=4]
[ext_resource path="res://Resources/Sprites/Retry.png" type="Texture" id=5]
[ext_resource path="res://Resources/Sprites/Begin.png" type="Texture" id=6]
[ext_resource path="res://Resources/Background/stars3.png" type="Texture" id=7]

[node name="Node2D" type="Node2D"]
scale = Vector2( 1, 1.02238 )
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )
motion_mirroring = Vector2( 200, 150 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 2 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )
motion_mirroring = Vector2( 200, 150 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
scale = Vector2( 1.01486, 0.991401 )
texture = ExtResource( 4 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.35, 0.35 )
motion_mirroring = Vector2( 200, 150 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 3 )
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_mirroring = Vector2( 200, 150 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource( 7 )
centered = false

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Score" type="Label" parent="Camera2D"]
margin_left = 123.204
margin_top = 122.909
margin_right = 180.204
margin_bottom = 136.909
text = "SCORE: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BeginButton" type="Button" parent="."]
anchor_right = 50.0
margin_left = 70.0
margin_top = 50.0
margin_right = 140.0
margin_bottom = 90.0
icon = ExtResource( 6 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="."]
margin_left = 76.0
margin_top = 50.0
margin_right = 146.0
margin_bottom = 90.0
disabled = true
icon = ExtResource( 5 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BeginButton" to="." method="_on_BeginButton_pressed"]
[connection signal="pressed" from="RetryButton" to="." method="_on_RetryButton_pressed"]
